@@ -51,6 +51,7 @@ exportMethods(print)
 exportMethods(rcond)
 exportMethods(scale)
 exportMethods(show)
+exportMethods(sum)
 exportMethods(svd)
 import(methods)
 importFrom(pbdMPI,allreduce)
